[tool.poetry]
name = "wavy"
version = "0.1.0"
description = "Wavy is a library to facilitate time series analysis"
authors = ["Logspace <contact@logspace.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.2"
sklearn = "^0.0"
plotly = "^5.7.0"
tensorflow = "^2.8.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
pre-commit = "*"
flake8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
