[tool.poetry]
name = "wavyts"
version = "0.1.9"
description = "Wavy is a library to facilitate time series analysis"
authors = ["Ibis Prevedello <ibiscp@gmail.com>",
"Rodrigo Nader <rodrigosilvanader@gmail.com>",
"Gabriel Almeida <gabrielf.almeida90@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/logspace-ai/wavy"
repository = "https://github.com/logspace-ai/wavy"
include = ["LICENSE"]
packages = [{include = "wavy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.2"
sklearn = "^0.0"
plotly = "^5.7.0"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
tqdm = "^4.64.0"
plotlab = "^0.1.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
pre-commit = "*"
flake8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pytest]
python_files = ["test_*.py"]